--- a/app/resources/scss/bootstrap/icons/styles.scss
+++ b/app/resources/scss/bootstrap/icons/styles.scss
@@ -1,19 +1,19 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: "seimyna";
-  src:url("fonts/seimyna.eot");
-  src:url("fonts/seimyna.eot?#iefix") format("embedded-opentype"),
-    url("fonts/seimyna.woff") format("woff"),
-    url("fonts/seimyna.ttf") format("truetype"),
-    url("fonts/seimyna.svg#seimyna") format("svg");
+  font-family: "icons";
+  src:url("fonts/icons.eot");
+  src:url("fonts/icons.eot?#iefix") format("embedded-opentype"),
+    url("fonts/icons.woff") format("woff"),
+    url("fonts/icons.ttf") format("truetype"),
+    url("fonts/icons.svg#icons") format("svg");
   font-weight: normal;
   font-style: normal;
 
 }
 
 [data-icon]:before {
-  font-family: "seimyna" !important;
+  font-family: "icons" !important;
   content: attr(data-icon);
   font-style: normal !important;
   font-weight: normal !important;
@@ -27,7 +27,7 @@
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-  font-family: "seimyna" !important;
+  font-family: "icons" !important;
   font-style: normal !important;
   font-weight: normal !important;
   font-variant: normal !important;
@@ -46,15 +46,6 @@
 }
 .icon-envelope:before {
   content: "\63";
-}
-.icon-left-open-mini:before {
-  content: "\64";
-}
-.icon-right-open-mini:before {
-  content: "\66";
-}
-.icon-angle-down:before {
-  content: "\65";
 }
 .icon-angle-up:before {
   content: "\67";
@@ -125,13 +116,7 @@
 .icon-arrow-down:before {
   content: "\43";
 }
-.icon-arrow-up:before {
-  content: "\44";
-}
-.icon-arrow-left:before {
-  content: "\45";
-}
-.icon-arrow-right:before {
+.icon-arr-right:before {
   content: "\46";
 }
 .icon-vallet:before {
