--- a/app/resources/scss/theme/gradient.scss
+++ b/app/resources/scss/theme/gradient.scss
@@ -1,58 +1,5 @@
 .gradiend {
-
-  &--0 {
-    background: rgb(255, 127, 52);
-    background: -moz-linear-gradient(147deg, rgba(255, 127, 52, 1) 0%, rgba(190, 182, 18, 1) 100%);
-    background: -webkit-linear-gradient(147deg, rgba(255, 127, 52, 1) 0%, rgba(190, 182, 18, 1) 100%);
-    background: linear-gradient(147deg, rgba(255, 127, 52, 1) 0%, rgba(190, 182, 18, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff7f34", endColorstr="#beb612", GradientType=1);
-  }
-
-  &--1 {
-    background: rgb(255, 4, 55);
-    background: -moz-linear-gradient(147deg, rgba(255, 4, 55, 1) 0%, rgba(70, 18, 190, 1) 100%);
-    background: -webkit-linear-gradient(147deg, rgba(255, 4, 55, 1) 0%, rgba(70, 18, 190, 1) 100%);
-    background: linear-gradient(147deg, rgba(255, 4, 55, 1) 0%, rgba(70, 18, 190, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff0437", endColorstr="#4612be", GradientType=1);
-  }
-
-  &--2 {
-    background: rgb(13, 190, 96);
-    background: -moz-linear-gradient(147deg, rgba(13, 190, 96, 1) 0%, rgba(18, 189, 190, 1) 100%);
-    background: -webkit-linear-gradient(147deg, rgba(13, 190, 96, 1) 0%, rgba(18, 189, 190, 1) 100%);
-    background: linear-gradient(147deg, rgba(13, 190, 96, 1) 0%, rgba(18, 189, 190, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0dbe60", endColorstr="#12bdbe", GradientType=1)
-  }
-
-  &--3 {
-    background: rgb(52, 216, 255);
-    background: -moz-linear-gradient(147deg, rgba(52, 216, 255, 1) 0%, rgba(18, 79, 190, 1) 100%);
-    background: -webkit-linear-gradient(147deg, rgba(52, 216, 255, 1) 0%, rgba(18, 79, 190, 1) 100%);
-    background: linear-gradient(147deg, rgba(52, 216, 255, 1) 0%, rgba(18, 79, 190, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#34d8ff", endColorstr="#124fbe", GradientType=1);
-  }
-
-  &--4 {
-    background: rgb(52, 100, 255);
-    background: -moz-linear-gradient(147deg, rgba(52, 100, 255, 1) 0%, rgba(174, 18, 190, 1) 100%);
-    background: -webkit-linear-gradient(147deg, rgba(52, 100, 255, 1) 0%, rgba(174, 18, 190, 1) 100%);
-    background: linear-gradient(147deg, rgba(52, 100, 255, 1) 0%, rgba(174, 18, 190, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3464ff", endColorstr="#ae12be", GradientType=1);
-  }
-
   &--primary {
-    background: rgb(99, 102, 241);
-    background: -moz-linear-gradient(147deg, rgba(99, 102, 241, 1) 0%, rgba(147, 7, 232, 1) 100%);
-    background: -webkit-linear-gradient(147deg, rgba(99, 102, 241, 1) 0%, rgba(147, 7, 232, 1) 100%);
-    background: linear-gradient(147deg, rgba(99, 102, 241, 1) 0%, rgba(147, 7, 232, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6366f1", endColorstr="#9307e8", GradientType=1);
-  }
-
-  &--transaction {
-    background: rgb(99,102,241);
-    background: -moz-linear-gradient(180deg, rgba(99,102,241,1) 0%, rgba(173,99,241,1) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(99,102,241,1) 0%, rgba(173,99,241,1) 100%);
-    background: linear-gradient(180deg, rgba(99,102,241,1) 0%, rgba(173,99,241,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6366f1",endColorstr="#ad63f1",GradientType=1);
+    @include primaryGradiend;
   }
 }
