--- a/app/resources/scss/theme/button.scss
+++ b/app/resources/scss/theme/button.scss
@@ -20,7 +20,7 @@
     }
 
     &--rounded {
-        @apply rounded-full;
+        @apply rounded-full shrink-0;
     }
 
     &:not(.button--rounded) {
