--- a/app/resources/scss/theme/page.scss
+++ b/app/resources/scss/theme/page.scss
@@ -1,7 +1,7 @@
 .page-enter-active,
 .page-leave-active {
-  position: fixed;
-  transition: opacity .15s ease, transform .15s ease;
+  position: absolute;
+  transition: opacity .2s ease, transform .2s ease;
 }
 
 .page-enter-active {
@@ -16,6 +16,7 @@
 .page-leave-to {
   opacity: 0;
 }
+
 
 .bubble-top-right,
 .bubble-bottom-right,
