--- a/app/resources/scss/app.scss
+++ b/app/resources/scss/app.scss
@@ -19,5 +19,6 @@ $font-family: 'Inter';
 @import 'theme/page';
 @import 'theme/gradient';
 @import 'theme/splash';
+@import 'theme/option';
 
 @import 'theme/family';
