--- a/app/resources/scss/bootstrap/icons/styles.scss
+++ b/app/resources/scss/bootstrap/icons/styles.scss
@@ -137,3 +137,9 @@
 .icon-home:before {
   content: "\64";
 }
+.icon-male:before {
+  content: "\65";
+}
+.icon-female:before {
+  content: "\66";
+}
