--- a/app/resources/scss/app.scss
+++ b/app/resources/scss/app.scss
@@ -20,5 +20,6 @@ $font-family: 'Inter';
 @import 'theme/gradient';
 @import 'theme/splash';
 @import 'theme/option';
+@import 'theme/switch';
 
 @import 'theme/family';
