--- a/app/resources/scss/app.scss
+++ b/app/resources/scss/app.scss
@@ -21,5 +21,6 @@ $font-family: 'Inter';
 @import 'theme/splash';
 @import 'theme/option';
 @import 'theme/switch';
+@import 'theme/animated-icon';
 
 @import 'theme/family';
